changed 3D animation for testimony card and improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 
         <div class="header">
           <div class="brand">
-            <h2>J<span>J</span></h2>
+            <a href="./" class="brand-link">
+              <h2>J<span>J</span></h2>
+            </a>
           </div>
           <div class="headerRight">
 
             <nav>
               <div class="navLink">
-                <a href="index.html#home">Home</a>
+                <a href="#home">Home</a>
               </div>
               <div class="navLink">
                 <a href="#about">About</a>
