--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Adepelumi</title>
-    <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>John Adepelumi</title>
+  <!-- CSS only -->
+  <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <div class="body">
@@ -20,25 +21,28 @@
               <h2>J<span>J</span></h2>
             </a>
           </div>
-          <div class="headerRight">
+          <div class="headerRight" id="headerRight">
 
             <nav>
-              <div class="navLink">
+              <div class="navLink" onclick="toggleMenu2()" >
                 <a href="#home">Home</a>
               </div>
-              <div class="navLink">
+              <div class="navLink" onclick="toggleMenu2()">
                 <a href="#about">About</a>
               </div>
-              <div class="navLink">
+              <div class="navLink" onclick="toggleMenu2()">
                 <a href="#portfolio">Portfolio</a>
               </div>
             </nav>
 
-            <div class="contact">
+            <div class="contact" onclick="toggleMenu()">
               <a href="#" class="contactBtn">
                 Say Hello
               </a>
             </div>
+          </div>
+          <div class="navMenu" id="navMenu">
+            <img src="./assets/menu.png" alt="menu icon" class="menuIcon" onclick="toggleMenu()">
           </div>
         </div>
 
