changed url for bjscomf

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
             </nav>
 
-            <div class="contact" onclick="toggleMenu()">
+            <div class="contact" onclick="toggleMenu2()">
               <a href="#" class="contactBtn">
                 Say Hello
               </a>
