fixed countries listing app image and link to testimonies section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
               <div class="navLink" onclick="toggleMenu2()">
                 <a href="#portfolio">Portfolio</a>
               </div>
+              <div class="navLink" onclick="toggleMenu2()">
+                <a href="#testimonies">Testimonies</a>
+              </div>
             </nav>
 
             <div class="contact" onclick="toggleMenu2()">
