added contact links to footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>John Adepelumi</title>
   <!-- CSS only -->
   <link href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
@@ -94,7 +95,29 @@
 
     <!-- footer -->
     <footer class="footer" id="footer">
-      Designed and built by Johndiddles
+      <div class="footer_author">
+        Designed and built by Johndiddles
+      </div>
+      <div class="footer_links">
+        <a href="https://www.linkedin.com/in/john-adepelumi-52b22b128/" class="footer_links_item">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="https://github.com/johndiddles" class="footer_links_item">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://twitter.com/DiddlesCode" class="footer_links_item">
+          <i class="bi bi-twitter"></i>
+        </a>
+        <a href="https://wa.me/2348181933012?text=Hi%John,%20would%20you%20be%20interested%20in%20a%20frontend%20role/gig?" class="footer_links_item">
+          <i class="bi bi-whatsapp"></i>
+        </a>
+        <a href="https://www.facebook.com/JohnAdepelumi/" class="footer_links_item">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="mailto:johnadepelumi@yahoo.com" class="footer_links_item">
+          <i class="bi bi-envelope"></i>
+        </a>
+      </div>
     </footer>
   </div>
     
