added gsap animations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body>
     <div class="body">
@@ -81,7 +81,9 @@
               ><span class="introFont two">p</span
               ><span class="introFont">e</span>r<span class="tag"> /> </span>
             </h1>
-            <p>I code beautifully simple things, and I love what I do</p>
+            <p class="introCaption">
+              I code beautifully simple things, and I love what I do
+            </p>
           </div>
         </div>
       </div>
@@ -159,7 +161,70 @@
       </footer>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/menuToggler.js"></script>
+    <script>
+      var tl = gsap.timeline({ defaults: { duration: 0.2 } });
+      tl.from(".heroContent", {
+        duration: 1,
+        opacity: 0,
+        x: "100vw",
+        ease: "power4.out",
+      })
+        .from(".mainHeroSection", {
+          duration: 0.8,
+          y: "-100vh",
+          opacity: 0,
+          scale: 0.2,
+          ease: "power4.out",
+        })
+        .from(
+          ".brand",
+          {
+            y: "50vh",
+            x: "50vw",
+            scale: 5,
+            duration: 1,
+          },
+          "-=1"
+        )
+        .from(".navLink", {
+          stagger: 0.2,
+          rotate: 180,
+          // scale: 2,
+          y: "10vh",
+          // x: "-100vw",
+          opacity: 0,
+          ease: "power4.out",
+        })
+        .from(".intro", {
+          opacity: 0,
+          duration: 0.5,
+          ease: "power4.out",
+        })
+        .from(".introFont", {
+          stagger: 0.1,
+          opacity: 0,
+          ease: "power4.out",
+        })
+        .from(".introCaption", {
+          opacity: 0,
+          scale: 0.5,
+          duration: 1,
+          ease: "power4.out",
+        })
+        .from(".contact", {
+          opacity: 0,
+          duration: 2,
+        });
+
+      gsap.from(".aboutSection", {
+        duration: 1,
+        opacity: 0,
+        x: "-100vw",
+        ease: "power4.out",
+      });
+    </script>
   </body>
 </html>
