--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Header and Hero Section  -->
       <div class="hero" id="home">
         <!-- video background -->
-        <video autoplay muted loop id="videoBg">
+        <video class="videoBg" autoplay muted loop id="videoBg">
           <source src="./assets/videobg.mp4" type="video/mp4" />
         </video>
 
@@ -166,12 +166,17 @@
     <script src="./scripts/menuToggler.js"></script>
     <script>
       var tl = gsap.timeline({ defaults: { duration: 0.2 } });
-      tl.from(".heroContent", {
-        duration: 1,
-        opacity: 0,
-        x: "100vw",
+      tl.from(".videoBg", {
+        duration: 0.5,
+        opacity: 0.8,
         ease: "power4.out",
       })
+        .from(".heroContent", {
+          duration: 1,
+          opacity: 0,
+          x: "100vw",
+          ease: "power4.out",
+        })
         .from(".mainHeroSection", {
           duration: 0.8,
           y: "-100vh",
