--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- Header and Hero Section  -->
       <div class="hero" id="home">
         <!-- video background -->
-        <video class="videoBg" autoplay muted loop id="videoBg">
+        <video class="videoBg" autoplay muted playsinline loop id="videoBg">
           <source src="./assets/videobg.mp4" type="video/mp4" />
         </video>
 
