--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body>
     <div class="body" style="background: rgba(0, 0, 0, 0.8)">
