--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- video background -->
         <video class="videoBg" playsinline autoplay muted loop id="videoBg">
           <source src="./assets/videobg.mp4" type="video/mp4" />
+          <source src="./assets/videobg.flv" type="video/flv" />
         </video>
 
         <div class="heroContent">
