--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   </head>
   <body>
     <div class="body">
+      <div class="cursor-outer"></div>
+      <div class="cursor-inner"></div>
       <!-- Header and Hero Section  -->
       <div class="hero" id="home">
         <!-- video background -->
@@ -163,9 +165,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="./scripts/index.js"></script>
     <script src="./scripts/menuToggler.js"></script>
     <script>
+      gsap.registerPlugin(ScrollTrigger);
       var tl = gsap.timeline({ defaults: { duration: 0.2 } });
       tl.from(".videoBg", {
         duration: 0.5,
@@ -226,9 +230,27 @@
         });
 
       gsap.from(".aboutSection", {
+        scrollTrigger: {
+          trigger: ".aboutSection",
+          toggleActions: "play reverse restart reverse",
+          start: "top center",
+          end: "bottom center",
+        },
         duration: 1,
         opacity: 0,
         x: "-100vw",
+        ease: "power4.out",
+      });
+
+      gsap.from(".portfolioSection", {
+        scrollTrigger: {
+          trigger: ".portfolioSection",
+          toggleActions: "restart reverse restart reverse",
+          start: "top center",
+          end: "bottom top",
+        },
+        duration: 1,
+        x: "100vw",
         ease: "power4.out",
       });
     </script>
