--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
           duration: 2,
         });
 
-      gsap.from(".aboutSection", {
+      gsap.from(".aboutSectionText", {
         scrollTrigger: {
-          trigger: ".aboutSection",
+          trigger: ".aboutSectionText",
           toggleActions: "play reverse restart reverse",
           start: "top center",
           end: "bottom center",
