--- a/index.html
+++ b/index.html
@@ -21,6 +21,41 @@
       <div class="cursor-outer"></div>
       <div class="cursor-inner"></div>
       <!-- Header and Hero Section  -->
+      <div class="header">
+        <div class="brand">
+          <a href="./" class="brand-link">
+            <h2>J<span>J</span></h2>
+          </a>
+        </div>
+        <div class="headerRight" id="headerRight">
+          <nav>
+            <div class="navLink" onclick="toggleMenu2()">
+              <a href="#home">Home</a>
+            </div>
+            <div class="navLink" onclick="toggleMenu2()">
+              <a href="#about">About</a>
+            </div>
+            <div class="navLink" onclick="toggleMenu2()">
+              <a href="#portfolio">Portfolio</a>
+            </div>
+            <div class="navLink" onclick="toggleMenu2()">
+              <a href="#testimonies">Testimonies</a>
+            </div>
+          </nav>
+
+          <div class="contact" onclick="toggleMenu2()">
+            <a href="./contact.html" class="contactBtn"> Say Hello </a>
+          </div>
+        </div>
+        <div class="navMenu" id="navMenu">
+          <img
+            src="./assets/menu.png"
+            alt="menu icon"
+            class="menuIcon"
+            onclick="toggleMenu()"
+          />
+        </div>
+      </div>
       <div class="hero" id="home">
         <!-- video background -->
         <video class="videoBg" playsinline autoplay muted loop id="videoBg">
@@ -30,41 +65,6 @@
 
         <div class="heroContent">
           <!-- header -->
-          <div class="header">
-            <div class="brand">
-              <a href="./" class="brand-link">
-                <h2>J<span>J</span></h2>
-              </a>
-            </div>
-            <div class="headerRight" id="headerRight">
-              <nav>
-                <div class="navLink" onclick="toggleMenu2()">
-                  <a href="#home">Home</a>
-                </div>
-                <div class="navLink" onclick="toggleMenu2()">
-                  <a href="#about">About</a>
-                </div>
-                <div class="navLink" onclick="toggleMenu2()">
-                  <a href="#portfolio">Portfolio</a>
-                </div>
-                <div class="navLink" onclick="toggleMenu2()">
-                  <a href="#testimonies">Testimonies</a>
-                </div>
-              </nav>
-
-              <div class="contact" onclick="toggleMenu2()">
-                <a href="./contact.html" class="contactBtn"> Say Hello </a>
-              </div>
-            </div>
-            <div class="navMenu" id="navMenu">
-              <img
-                src="./assets/menu.png"
-                alt="menu icon"
-                class="menuIcon"
-                onclick="toggleMenu()"
-              />
-            </div>
-          </div>
 
           <!-- Hero section -->
           <div class="mainHeroSection">
@@ -229,30 +229,30 @@
           duration: 2,
         });
 
-      gsap.from(".aboutSectionText", {
-        scrollTrigger: {
-          trigger: ".aboutSectionText",
-          toggleActions: "play reverse restart reverse",
-          start: "top center",
-          end: "bottom center",
-        },
-        duration: 1,
-        opacity: 0,
-        x: "-100vw",
-        ease: "power4.out",
-      });
+      // gsap.from(".aboutSectionText", {
+      //   scrollTrigger: {
+      //     trigger: ".aboutSectionText",
+      //     toggleActions: "play reverse restart reverse",
+      //     start: "top center",
+      //     end: "bottom center",
+      //   },
+      //   duration: 1,
+      //   opacity: 0,
+      //   x: "-100vw",
+      //   ease: "power4.out",
+      // });
 
-      gsap.from(".portfolioSection", {
-        scrollTrigger: {
-          trigger: ".portfolioSection",
-          toggleActions: "restart reverse restart reverse",
-          start: "top center",
-          end: "bottom top",
-        },
-        duration: 1,
-        x: "100vw",
-        ease: "power4.out",
-      });
+      // gsap.from(".portfolioSection", {
+      //   scrollTrigger: {
+      //     trigger: ".portfolioSection",
+      //     toggleActions: "restart reverse restart reverse",
+      //     start: "top center",
+      //     end: "bottom top",
+      //   },
+      //   duration: 1,
+      //   x: "100vw",
+      //   ease: "power4.out",
+      // });
     </script>
   </body>
 </html>
