minor styling adjustment and bug fixes

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             Nice to meet you!
           </h3>
           <p class="aboutText">
-            I'm a front-end Developer with proven ability to collaborate
-            effectively and with working experience at Zuri Chat in creating and
-            maintaining better code base for reusability. Capable of learning
+            I am a front-end Developer with proven ability to collaborate
+            effectively and with working experience at Arkbridge Integrated Limited and Zuri Chat in creating and
+            maintaining well organized code base for scalability. Capable of learning
             from senior developers while helping junior developers grow.
             Passionate about learning new skills and technologies while building
             and improving on already acquired skill sets.
