--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
           </h3>
           <p class="aboutText">
             I am a front-end Developer with proven ability to collaborate
-            effectively and with working experience at Arkbridge Integrated Limited and Zuri Chat in creating and
-            maintaining well organized code base for scalability. Capable of learning
-            from senior developers while helping junior developers grow.
-            Passionate about learning new skills and technologies while building
-            and improving on already acquired skill sets.
+            effectively and with working experience at Arkbridge Integrated
+            Limited and Zuri Chat in creating and maintaining well organized
+            code base for scalability. Capable of learning from senior
+            developers while helping junior developers grow. Passionate about
+            learning new skills and technologies while building and improving on
+            already acquired skill sets.
           </p>
         </div>
       </section>
@@ -228,31 +229,6 @@
           opacity: 0,
           duration: 2,
         });
-
-      // gsap.from(".aboutSectionText", {
-      //   scrollTrigger: {
-      //     trigger: ".aboutSectionText",
-      //     toggleActions: "play reverse restart reverse",
-      //     start: "top center",
-      //     end: "bottom center",
-      //   },
-      //   duration: 1,
-      //   opacity: 0,
-      //   x: "-100vw",
-      //   ease: "power4.out",
-      // });
-
-      // gsap.from(".portfolioSection", {
-      //   scrollTrigger: {
-      //     trigger: ".portfolioSection",
-      //     toggleActions: "restart reverse restart reverse",
-      //     start: "top center",
-      //     end: "bottom top",
-      //   },
-      //   duration: 1,
-      //   x: "100vw",
-      //   ease: "power4.out",
-      // });
     </script>
   </body>
 </html>
