--- a/index.html
+++ b/index.html
@@ -57,32 +57,15 @@
         </div>
       </div>
       <div class="hero" id="home">
-        <!-- video background -->
-        <video class="videoBg" playsinline autoplay muted loop id="videoBg">
-          <source src="./assets/videobg.mp4" type="video/mp4" />
-          <source src="./assets/videobg.flv" type="video/flv" />
-        </video>
-
         <div class="heroContent">
           <!-- header -->
 
           <!-- Hero section -->
           <div class="mainHeroSection">
             <h1 class="intro">
-              F<span class="introFont">r</span
-              ><span class="introFont two">o</span
-              ><span class="introFont">n</span
-              ><span class="introFont two">t</span
-              ><span class="introFont">e</span
-              ><span class="introFont two">n</span
-              ><span class="introFont">d</span
-              ><span class="introFont"> </span>D<span class="introFont">e</span
-              ><span class="introFont two">v</span
-              ><span class="introFont">e</span
-              ><span class="introFont two">l</span
-              ><span class="introFont">o</span
-              ><span class="introFont two">p</span
-              ><span class="introFont">e</span>r<span class="tag"> /> </span>
+              Full-Stack Engineer
+
+              <span class="tag"> /> </span>
             </h1>
             <p class="introCaption">
               I code beautifully simple things, and I love what I do
@@ -105,13 +88,18 @@
             Nice to meet you!
           </h3>
           <p class="aboutText">
-            I am a front-end Developer with proven ability to collaborate
-            effectively and with working experience at Arkbridge Integrated
-            Limited and Zuri Chat in creating and maintaining well organized
-            code base for scalability. Capable of learning from senior
-            developers while helping junior developers grow. Passionate about
-            learning new skills and technologies while building and improving on
-            already acquired skill sets.
+            Hi there! I'm a Full Stack Engineer bubbling with code and coffee,
+            with 2+ years of experience under my belt. Building user-friendly
+            web apps is my jam, and I love wielding JavaScript (React, Next.js,
+            Node/Express) like a magic wand. Plus, I'm fluent in the language of
+            the clouds, thanks to AWS services like Amplify, Cognito, Lambda,
+            and DynamoDB. I started my coding journey on the frontend, sculpting
+            pixel-perfect designs with React. But then I discovered the
+            full-stack symphony, and now I relish being involved in every note,
+            from conception to deployment. When I'm not knee-deep in code,
+            you'll find me tickling the ivories on my guitar or diving into the
+            latest tech trends. I'm always eager to learn and collaborate, so
+            let's connect and chat code!
           </p>
         </div>
       </section>
@@ -165,70 +153,7 @@
       </footer>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/menuToggler.js"></script>
-    <script>
-      gsap.registerPlugin(ScrollTrigger);
-      var tl = gsap.timeline({ defaults: { duration: 0.2 } });
-      tl.from(".videoBg", {
-        duration: 0.5,
-        opacity: 0.8,
-        ease: "power4.out",
-      })
-        .from(".heroContent", {
-          duration: 1,
-          opacity: 0,
-          x: "100vw",
-          ease: "power4.out",
-        })
-        .from(".mainHeroSection", {
-          duration: 0.8,
-          y: "-100vh",
-          opacity: 0,
-          scale: 0.2,
-          ease: "power4.out",
-        })
-        .from(
-          ".brand",
-          {
-            y: "50vh",
-            x: "50vw",
-            scale: 5,
-            duration: 1,
-          },
-          "-=1"
-        )
-        .from(".navLink", {
-          stagger: 0.2,
-          rotate: 180,
-          // scale: 2,
-          y: "10vh",
-          // x: "-100vw",
-          opacity: 0,
-          ease: "power4.out",
-        })
-        .from(".intro", {
-          opacity: 0,
-          duration: 0.5,
-          ease: "power4.out",
-        })
-        .from(".introFont", {
-          stagger: 0.1,
-          opacity: 0,
-          ease: "power4.out",
-        })
-        .from(".introCaption", {
-          opacity: 0,
-          scale: 0.5,
-          duration: 1,
-          ease: "power4.out",
-        })
-        .from(".contact", {
-          opacity: 0,
-          duration: 2,
-        });
-    </script>
   </body>
 </html>
