fixed broken images

--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
-    />
+    /> -->
     <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body class="contactPage">
@@ -52,7 +52,7 @@
         </div>
         <div class="navMenu" id="navMenu">
           <img
-            src="./assets/menu.png"
+            src="./assets/menu.avif"
             alt="menu icon"
             class="menuIcon"
             onclick="toggleMenu()"
