--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
-    />
+    /> -->
     <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body>
