--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
-    /> -->
     <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body class="contactPage">
@@ -153,7 +149,7 @@
     </div>
 
     <!-- <script src="./scripts/index.js"></script> -->
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/menuToggler.js"></script>
     <script src="./scripts/form.js"></script>
   </body>
