bug fixes and contact form submission

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.avif" />
     <title>John Adepelumi</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap"
@@ -149,6 +150,7 @@
     </div>
 
     <!-- <script src="./scripts/index.js"></script> -->
+    <script src="./scripts/toastify.js"></script>
     <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/menuToggler.js"></script>
     <script src="./scripts/form.js"></script>
