--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
       name="description"
       content="Welcome to Johndiddle's place. A full-stack engineer "
     />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.avif" />
     <title>John Adepelumi</title>
     <!-- CSS only -->
     <link
       href="https://fonts.googleapis.com/css2?family=Aclonica&family=Lato:wght@100;300;400;700;900&family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
+
     <link rel="stylesheet" href="/css/main.min.css" />
   </head>
   <body>
@@ -170,6 +176,7 @@
       </footer>
     </div>
 
+    <script src="./scripts/toastify.js"></script>
     <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/menuToggler.js"></script>
   </body>
